# py-puml-tools

./: .gitignore  README.md
py2puml/: README.rst  ast_visitor.py  code_info.py  puml_generator.py  py2puml.py  pyproject.toml  sw_client-puml-notes.md  version.py
py2puml/examples/: Makefile  bugged.py  example.puml  example.py  example_globals.puml  example_globals_NS.puml
py2puml/examples/cal_clock3/: Makefile  README.md  pyproject.toml
py2puml/tests/: test_ast_visitor.py  test_astor.py  test_code_info.py  test_puml_generator.py  test_py2puml.py
