[tool.poetry]
name = "py2puml"
version = "0.3.1"
description = "Generates PlantUML class diagrams from Python source code."
authors = [ "Michelle Baert <rocky.road@rocky-shore.net>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.5"
astor = "*"
pyyaml = "*"
setuptools-scm = "*"

[tool.poetry.dev-dependencies]
certifi = "*"
coverage = "*"
py = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.masonry.api"
