[tool.poetry]
name = "cal_clock3"
version = "0.0.1"
description = "Example borrowed from http://www.python-course.eu/python3_multiple_inheritance.php"
authors = []

[tool.poetry.dependencies]
python = "^3.5"
astor = "*"
pyyaml = "*"
setuptools-scm = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
